# some_kind_of_project

./: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.hpp  app_connect_ui.cpp  tab1.cpp  tab2.cpp  tab3.cpp
src/app/ui/: UI.hpp  untitled.ui
src/lab_funcs/: CMakeLists.txt  common_chars.cpp  funcs.hpp  order_sportsmens.cpp
